<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_text">Welcome to this journey</string>
    <string name="full_name_hint">Full name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="new_account">New Account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="resend_verification">Resend Verification link</string>
    <string name="forgot_password">Forgot Password?.</string>
    <string name="dialog_title">Resend Email verification</string>
    <string name="sign_out">Sign out</string>
</resources>